BACKPORT: FROMGIT: drm/i915/chv: Update csc coefficient matrix during modeset

During modeset, previously configured csc coefficient matrix,if any, will
not persist. This can result in blank screen as csc mode will be programmed
while loading LUT but csc coefficient matrix remains unprogrammed.

Changes since V1:
- Removed platform check

Signed-off-by: P Raviraj Sitaram <raviraj.p.sitaram@intel.com>
Signed-off-by: Ville Syrjl <ville.syrjala@linux.intel.com>
Link: https://patchwork.freedesktop.org/patch/msgid/1536589634-29680-1-git-send-email-raviraj.p.sitaram@intel.com
(cherry picked from commit c59d2da8ec189489a30b351d7fdb5923bcb9ca5f
git://anongit.freedesktop.org/drm-tip drm-tip)

Conflicts:
   drivers/gpu/drm/i915/intel_display.c
(Manually resolved conflicts because of code divergence in intel_display.c
from upstream and function signature change in valleyview_crtc_enable())

Signed-off-by: P Raviraj Sitaram <raviraj.p.sitaram@intel.com>

BUG=chromium:863853
TEST=on cherryview devices, switch to dev console from chrome ui.
     dev console should come up properly

Change-Id: I15b9158d00e3cc898171b9fa74d5112491740c62
Reviewed-on: https://chromium-review.googlesource.com/1220974
Commit-Ready: ChromeOS CL Exonerator Bot <chromiumos-cl-exonerator@appspot.gserviceaccount.com>
Tested-by: Raviraj P Sitaram <raviraj.p.sitaram@intel.com>
Reviewed-by: Anand Naik <anand.naik@intel.corp-partner.google.com>
Reviewed-by: Stéphane Marchesin <marcheu@chromium.org>
Reviewed-by: Gurchetan Singh <gurchetansingh@chromium.org>