drivers/gpu/drm/i915/intel_display.c
@@ -5955,6 +5955,8 @@ static void valleyview_crtc_enable(struct drm_crtc *crtc)
 
 	i9xx_set_pipeconf(intel_crtc);
 
+	intel_color_set_csc(crtc);
+
 	intel_crtc->active = true;
 
 	intel_set_cpu_fifo_underrun_reporting(dev_priv, pipe, true);
